# skymath

./: .gitignore  .lsp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  apm.lock.yaml  apm.yml  justfile  release-please-config.json
.beads/: .gitignore  config.yaml  metadata.json
.claude/: apm-hooks.json
.claude/skills/speckit-cleanup/: SKILL.md
.claude/skills/speckit-cleanup-run/: SKILL.md
.claude/skills/speckit-critique-run/: SKILL.md
.codex/: hooks.json
.github/workflows/: ci.yml  cla-assistant.yml  release-please.yml
.project-setup/: .gitignore  answers.toml
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: DECISIONS.md  guide.md
examples/: plan_night.rs
scripts/: gen_astropy_vectors.py  gen_constellation_table.py
signatures/: cla.json
specs/001-skymath-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  verify-report.md
specs/002-sun-and-moon/: plan.md  research.md  spec.md  tasks.md
specs/003-constellation-id/: plan.md  research.md  spec.md  tasks.md  verify-report.md  verify-tasks-report.md
specs/tiny/: spherical-image-geometry.md
src/: angle.rs  constellation.rs  constellation_data.rs  coords.rs  error.rs  frames.rs  lib.rs  moon.rs  observer.rs  sun.rs  time.rs
tests/: astropy_vectors.rs  known_values.rs  ported_vectors.rs  properties.rs  serde_feature.rs
tests/data/: astropy_vectors.json
(+23 files in other folders)
