[package]
name = "skymath"
version = "0.3.2"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
description = "Planning-grade astronomy math for astrophotography tooling: angles, equatorial coordinates, sexagesimal parsing and formatting, angular separation and offsets, precession, MJD/JD/calendar conversions, sidereal time, and observer-local quantities (alt-az, airmass, transit)."
repository = "https://github.com/nightwatch-astro/skymath"
documentation = "https://docs.rs/skymath"
readme = "README.md"
keywords = ["astronomy", "astrophotography", "coordinates", "sidereal", "ephemeris"]
categories = ["science", "mathematics"]

# docs.rs builds with default features only unless told otherwise; include any
# optional feature derives in the generated API documentation.
[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.18"
time = { version = "0.3.41", features = ["formatting", "parsing", "macros"] }

[lib]
path = "src/lib.rs"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[features]
serde = ["dep:serde", "time/serde-human-readable"]

[dev-dependencies]
anyhow = "1.0.103"
proptest = "1.8.0"
serde_json = "1.0.150"
